<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DatabaseTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create">Create Table</string>
    <string name="add">Add Data</string>
    <string name="update">Update Data</string>
    <string name="delete">Delete Data</string>
    <string name="select">Select Data</string>
    <string name="replace">Replace Data</string>

</resources>
